# ChimerLibs

./: .gitignore  CMakeLists.txt  CMakePresets.json  ChimerLibs.sln  Directory.Build.props  LICENSE  README.md  chimer.sln
Chimer.Logging/: Chimer.Logging.vcxproj  Chimer.Logging.vcxproj.filters  ConsoleLogger.cpp  ConsoleLogger.hpp  LogLevel.hpp  Logger.cpp  Logger.hpp  LoggerDelegate.hpp
Chimer.TestFramework/: Chimer.TestFramework.vcxproj  Chimer.TestFramework.vcxproj.filters  LogMessages.hpp  Test.cpp  Test.hpp  TestDriver.cpp  TestDriver.hpp  TestFailureResult.hpp  TestSuite.cpp  TestSuite.hpp  TestSuiteResult.hpp
Chimer.TestFramework.EqualityTests/: Chimer.TestFramework.EqualityTests.vcxproj  Chimer.TestFramework.EqualityTests.vcxproj.filters  EqualTests.cpp  EqualTests.hpp  EqualityTests.cpp  LessThanTests.cpp  Main.cpp  NotEqualTests.cpp  NotEqualTests.hpp  TestDriver.cpp
Chimer.TestFramework.Tests/: Chimer.TestFramework.Tests.vcxproj  Chimer.TestFramework.Tests.vcxproj.filters  ExampleTests.cpp  GreaterThanTests.cpp
UnitTest1/: UnitTest1.cpp
chimer.test/: chimer.test.vcxproj  chimer.test.vcxproj.filters  suite.hpp  test.cpp  test.hpp  test_run_context.cpp  test_run_context.hpp
cmake/: CompilerFlags.cmake  InterproceduralOptimization.cmake  StaticLinkSTL.cmake
include/Chimer.IO/: Events.hpp  IOCompletion.hpp  Socket.hpp  SocketFamily.hpp  SocketProtocol.hpp
include/Chimer.IO/Win32/: IOCompletion.hpp  OverlappedData.hpp  Socket.hpp
include/Chimer.Logging/: CompositeLogger.hpp  ConsoleLogger.hpp  FileLogger.hpp  LogLevel.hpp  Logger.hpp  LoggerDelegate.hpp  ThreadedLogger.hpp
include/Chimer.Message/: Message.hpp
include/Chimer.TestFramework/: Test.hpp  TestCount.hpp  TestDriver.hpp  TestFailureResult.hpp  TestLogger.hpp  TestSuite.hpp  TestSuiteResult.hpp
include/Chimer/Core/: Concepts.hpp
include/Chimer/IO/: Events.hpp  IOCompletion.hpp  IOContext.hpp  Socket.hpp  SocketType.hpp
include/Chimer/IO/Win32/: OverlappedData.hpp  Socket.hpp
include/Chimer/Logging/: CompositeLogger.hpp  ConsoleLogger.hpp  FileLogger.hpp  Logger.hpp  LoggerDelegate.hpp  ThreadedLogger.hpp
include/Chimer/Message/: Message.hpp  MessageDeserializer.hpp
include/Chimer/TestFramework/: Test.hpp  TestCount.hpp  TestDriver.hpp  TestException.hpp  TestLogger.hpp  TestSuite.hpp  TestSuiteResult.hpp
infra/cmake/: MsvcToolchain.cmake  chimer-install-library-config.cmake
src/: CMakeLists.txt
src/Chimer.IO/: CMakeLists.txt  Chimer.IO-config.cmake.in
src/Chimer.IO.Examples/HelloWorld/: CMakeLists.txt  HelloClient.cpp  HelloServer.cpp
src/Chimer.IO/Win32/: IOCompletion.cpp  IOContext.cpp  LogMessages.hpp  Socket.cpp  Win32Helpers.cpp  Win32Helpers.hpp
src/Chimer.Logging/: CMakeLists.txt  Chimer.Logging-config.cmake.in  CompositeLogger.cpp  ConsoleLogger.cpp  FileLogger.cpp  Logger.cpp  ThreadedLogger.cpp
src/Chimer.Message/: CMakeLists.txt  Message.cpp  MessageDeserializer.cpp
src/Chimer.Message.Tests/: CMakeLists.txt  Main.cpp  SerializerTests.cpp
src/Chimer.TestFramework/: CMakeLists.txt  Chimer.TestFramework-config.cmake.in  LogMessages.hpp  Test.cpp  TestCount.cpp  TestDriver.cpp  TestException.cpp  TestLogger.cpp  TestSuite.cpp
src/Chimer.TestFramework.Tests/: CMakeLists.txt  EqualTests.cpp  FalseTests.cpp  GreaterThanTests.cpp  LessThanTests.cpp  Main.cpp  NotEqualTests.cpp  TrueTests.cpp
