add_subdirectory(Chimer.Logging)
add_subdirectory(Chimer.TestFramework)
add_subdirectory(Chimer.IO)
add_subdirectory(Chimer.Message)
if (${CHIMER_TESTING})
  include(CTest)
  enable_testing()
  add_subdirectory(Chimer.TestFramework.Tests)
  add_subdirectory(Chimer.Message.Tests)
endif()

if (${CHIMER_EXAMPLES})
  add_subdirectory(Chimer.IO.Examples)
endif()
